fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,7 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
+
 body {
   background: #fff;
   color: #444;
